Bug 217003 - PM: resume devices took ~60 seconds on Dell Vostro 5625
Summary: PM: resume devices took ~60 seconds on Dell Vostro 5625
Status: RESOLVED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Sleep-Wake (show other bugs)
Hardware: AMD Linux
: P1 normal
Assignee: Mario Limonciello (AMD)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-04 15:48 UTC by dbilios
Modified: 2023-03-06 21:15 UTC (History)
1 user (show)

See Also:
Kernel Version: 6.1.9.200
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Patch v2 (3.00 KB, patch)
2023-02-14 21:56 UTC, Mario Limonciello (AMD)
Details | Diff

Description dbilios 2023-02-04 15:48:56 UTC
The issue occurred on a brand new Dell Vostro 5626 laptop equipped with Ryzen 7 5825U processor running Fedora 37 (Kernel 6.1.9-200.fc37.x86_64).

Searching for a solution i found the following:
https://bugzilla.kernel.org/show_bug.cgi?id=216440
https://bugzilla.kernel.org/show_bug.cgi?id=216773

based on those i did make a custom kernel with a similar patch and the issue seems to be resolved.

Bellow is the patch for the modified kernel:
---
 drivers/acpi/x86/utils.c | 7 +++++++
 1 file changed, 7 insertions(+)

diff --git a/drivers/acpi/x86/utils.c b/drivers/acpi/x86/utils.c
index 4e816bb40..c75266fa2 100644
--- a/drivers/acpi/x86/utils.c
+++ b/drivers/acpi/x86/utils.c
@@ -225,6 +225,13 @@ static const struct dmi_system_id force_storage_d3_dmi[] = {
 			DMI_MATCH(DMI_PRODUCT_NAME, "Inspiron 16 5625"),
 		}
 	},
+ 	{
+ 		.matches = {
+ 			DMI_MATCH(DMI_SYS_VENDOR, "Dell Inc."),
+ 			DMI_MATCH(DMI_PRODUCT_NAME, "Vostro 5625"),
+ 		}
+ 	},
+
 	{}
 };
 
-- 

I am not sure if here is the proper way of reporting this.
Comment 1 Mario Limonciello (AMD) 2023-02-10 17:48:34 UTC
Good job!  Would you mind submitting the patch to the mailing lists?

https://www.kernel.org/doc/html/next/process/submitting-patches.html
Comment 2 Mario Limonciello (AMD) 2023-02-13 21:37:24 UTC
Sent up this patch for review:
https://lore.kernel.org/linux-acpi/20230213213537.6121-1-mario.limonciello@amd.com/T/#t
Comment 3 Mario Limonciello (AMD) 2023-02-14 21:56:27 UTC
Created attachment 303728 [details]
Patch v2

The list is growing too big, after 6.3-rc1 will submit this patch instead.
Comment 4 Mario Limonciello (AMD) 2023-03-06 21:15:25 UTC
Workaround for the BIOS bug is landed in 6.3-rc1.
https://github.com/torvalds/linux/commit/e2a56364485e7789e7b8f342637c7f3a219f7ede

Note You need to log in before you can comment on or make changes to this bug.